# mvpsp_dataset

./: .gitignore  README.md  pyproject.toml  setup.py
mvpsp/: dataset.py  loader.py  loader_aux.py  utils.py
scripts/: create_bop_test_targets.py  demo_visualization.ipynb  download.sh  viz_utils.py
