[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mvpsp-dataset"
version = "0.1.4"
description = "A python wrapper for the MVPSP dataset."
authors = [
    { name = "Jonas Hein", email = "jonas.hein@inf.ethz.ch" }
]
dependencies = [
    "opencv-python",
    "trimesh",
    "pathlib",
    "matplotlib",
    "numpy >= 1.20",
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
